--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
     environment:
       - NODE_ENV=development
       - EXPO_DEVTOOLS_LISTEN_ADDRESS=0.0.0.0
-      - EXPO_DEV_SERVER_ORIGIN=http://localhost:19000
+      - EXPO_DEV_SERVER_ORIGIN=http://0.0.0.0:19000
       - EXPO_TUNNEL_SUBDOMAIN=event-notification
       - EXPO_DEBUG=false
       - EXPO_NO_WARNINGS=1
