--- a/frontend/Dockerfile.dev
+++ b/frontend/Dockerfile.dev
@@ -1,27 +1,35 @@
 FROM node:18-alpine
 
+# Create a non-root user
+RUN addgroup -g 1001 -S nodejs
+RUN adduser -S expo -u 1001
+
 WORKDIR /app
 
-# Install Expo CLI and ngrok globally
-RUN npm install -g expo-cli @expo/ngrok@^4.1.0
+# Copy package files first for better caching
+COPY package*.json ./
+
+# Install dependencies locally (including expo-cli and ngrok)
+RUN npm install
+RUN npm install expo-cli @expo/ngrok@^4.1.0
 
 # Set environment variables for Expo
 ENV EXPO_DEVTOOLS_LISTEN_ADDRESS=0.0.0.0
-ENV EXPO_DEV_SERVER_ORIGIN=http://localhost:19000
+ENV EXPO_DEV_SERVER_ORIGIN=http://0.0.0.0:19000
 ENV EXPO_USE_STATIC_WEB_PACKAGER=true
 ENV EXPO_TUNNEL_SUBDOMAIN=event-notification
 ENV EXPO_DEBUG=false
 ENV EXPO_NO_WARNINGS=1
 ENV EXPO_NO_TTY=1
 
-# Copy package files
-COPY package*.json ./
-
-# Install dependencies
-RUN npm install
-
 # Copy source code
 COPY . .
+
+# Change ownership of the app directory to the non-root user
+RUN chown -R expo:nodejs /app
+
+# Switch to non-root user
+USER expo
 
 # Expose ports
 EXPOSE 19000 19001 19002 8081
