--- a/frontend/Dockerfile.dev
+++ b/frontend/Dockerfile.dev
@@ -9,9 +9,8 @@ WORKDIR /app
 # Copy package files first for better caching
 COPY package*.json ./
 
-# Install dependencies locally (including expo-cli and ngrok)
+# Install dependencies locally
 RUN npm install
-RUN npm install expo-cli @expo/ngrok@^4.1.0
 
 # Set environment variables for Expo
 ENV EXPO_DEVTOOLS_LISTEN_ADDRESS=0.0.0.0
