--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,12 +3,21 @@
   "version": "1.0.0",
   "main": "expo-router/entry",
   "scripts": {
-    "start": "expo start",
+    "start": "expo start --tunnel",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "clean": "rm -rf node_modules && npm install",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "dependencies": {
+    "@expo/ngrok": "^4.1.3",
+    "@gorhom/bottom-sheet": "^4.6.4",
+    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-navigation/native": "^7.1.17",
+    "@react-navigation/stack": "^7.1.1",
     "expo": "~53.0.20",
     "expo-constants": "~17.1.7",
     "expo-linking": "~7.1.7",
@@ -17,15 +26,41 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.5",
+    "react-native-gesture-handler": "~2.24.0",
+    "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
+    "react-native-vector-icons": "^10.2.0",
     "react-native-web": "^0.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@testing-library/jest-native": "^5.4.3",
+    "@testing-library/react": "^14.3.1",
+    "@testing-library/react-native": "^12.9.0",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^20.0.0",
     "@types/react": "~19.0.10",
     "@types/react-native": "^0.72.8",
+    "@types/react-native-vector-icons": "^6.4.18",
+    "jest": "^29.7.0",
+    "jest-expo": "~53.0.0",
     "typescript": "~5.8.3"
   },
-  "private": true
+  "private": true,
+  "resolutions": {
+    "@babel/runtime": "^7.26.10",
+    "axios": "^1.7.9",
+    "body-parser": "^1.20.2",
+    "cookie": "^0.7.0",
+    "got": "^11.8.5",
+    "minimatch": "^3.0.5",
+    "node-forge": "^1.3.1",
+    "path-to-regexp": "^6.2.1",
+    "qs": "^6.11.2",
+    "semver": "^7.6.0",
+    "send": "^0.19.0",
+    "webpack-dev-server": "^5.2.0",
+    "xml2js": "^0.6.2"
+  }
 }
