--- a/backend/.env.example
+++ b/backend/.env.example
@@ -5,5 +5,10 @@ NODE_ENV=development
 # Database Configuration
 MONGODB_URI=mongodb://localhost:27017/eventdb
 
-# Frontend Configuration
-FRONTEND_URL=http://localhost:3000
+# Frontend Configuration (Only applicable for Web UI, not Android/IOS apps)
+# FRONTEND_URL=http://localhost:3000
+
+# How Express trusts proxy headers (X-Forwarded-For, etc.)
+# Accepts: true|false|<number_of_hops>|CSV of CIDRs/named ranges
+# Defaults to: loopback, linklocal, uniquelocal, 10/8, 172.16/12, 192.168/16
+TRUST_PROXY=1
