--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,65 +1,46 @@
-# version: '3.8'
-
 services:
-  app:
-    build: 
+  frontend:
+    build:
       context: ./frontend
       dockerfile: Dockerfile.dev
     ports:
       - "8081:8081"
-      - "19000:19000"  # Expo dev server
-      - "19001:19001"  # Expo dev tools
-      - "19002:19002"  # Expo dev tools
-      - "19006:19006"  # Metro bundler
+      - "19000:19000" # Expo dev server
+      - "19001:19001" # Expo dev tools
+      - "19002:19002" # Expo dev tools
+      - "19006:19006" # Metro bundler
     volumes:
       - ./frontend:/app
-      - /app/node_modules
       - /app/.expo
     environment:
       - NODE_ENV=development
+      - EXPO_PUBLIC_API_URL=${EXPO_PUBLIC_API_URL:-http://backend:5000}
       - EXPO_DEVTOOLS_LISTEN_ADDRESS=0.0.0.0
       - EXPO_DEV_SERVER_ORIGIN=http://0.0.0.0:19000
       - EXPO_TUNNEL_SUBDOMAIN=event-notification
       - EXPO_DEBUG=false
       - EXPO_NO_WARNINGS=1
       - EXPO_NO_TTY=1
-    stdin_open: true  # Keep STDIN open for interactive mode
-    tty: true         # Allocate a pseudo-TTY
-    # depends_on:
-    #   - backend
+    stdin_open: true # Keep STDIN open for interactive mode
+    tty: true # Allocate a pseudo-TTY
+    depends_on:
+      - backend
 
-#   backend:
-#     build: 
-#       context: ./backend
-#       dockerfile: Dockerfile.dev
-#     ports:
-#       - "5000:5000"
-#     volumes:
-#       - ./backend:/app
-#       - /app/node_modules
-#     environment:
-#       - NODE_ENV=development
-#       - MONGODB_URI=mongodb://mongodb:27017/eventdb
-#     depends_on:
-#       - mongodb
+  backend:
+    build:
+      context: ./backend
+      dockerfile: Dockerfile.dev
+    ports:
+      - "5000:5000"
+    volumes:
+      - ./backend:/app
+      - /app/node_modules
+    environment:
+      - NODE_ENV=development
 
-#   mongodb:
-#     image: mongo:6.0
-#     ports:
-#       - "27017:27017"
-#     volumes:
-#       - mongodb_data:/data/db
-#     restart: always
-
-  # nginx:
-  #   image: nginx:alpine
-  #   ports:
-  #     - "80:80"
-  #   volumes:
-  #     - ./nginx/nginx.conf:/etc/nginx/nginx.conf
-  #   depends_on:
-  #     - frontend
-#       - backend
-
-# volumes:
-#   mongodb_data:
+  backend_tunnel:
+    image: cloudflare/cloudflared:2025.7.0
+    command: tunnel --url http://backend:5000 --no-autoupdate
+    depends_on:
+      - backend
+    restart: unless-stopped
