--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,8 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "clean": "rm -rf node_modules && npm install",
+    "build:android": "eas build -p android --profile production",
+    "build:ios": "eas build -p ios --profile production",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage"
@@ -18,9 +20,8 @@
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/stack": "^7.1.1",
-    "@types/axios": "^0.9.36",
-    "axios": "^1.11.0",
     "expo": "~53.0.20",
+    "expo-build-properties": "~0.14.0",
     "expo-constants": "~17.1.7",
     "expo-linking": "~7.1.7",
     "expo-router": "~5.1.4",
@@ -38,7 +39,6 @@
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@testing-library/jest-native": "^5.4.3",
-    "@testing-library/react": "^14.3.1",
     "@testing-library/react-native": "^12.9.0",
     "@types/jest": "^29.5.14",
     "@types/node": "^20.0.0",
@@ -47,12 +47,12 @@
     "@types/react-native-vector-icons": "^6.4.18",
     "jest": "^29.7.0",
     "jest-expo": "~53.0.0",
-    "typescript": "~5.8.3"
+    "typescript": "~5.8.3",
+    "eas-cli": "^16.17.4"
   },
   "private": true,
   "resolutions": {
     "@babel/runtime": "^7.26.10",
-    "axios": "^1.7.9",
     "body-parser": "^1.20.2",
     "cookie": "^0.7.0",
     "got": "^11.8.5",
