--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -7,9 +7,9 @@ http {
         server frontend:8081;
     }
 
-    # upstream backend {
-    #     server backend:5000;
-    # }
+    upstream backend {
+        server backend:5000;
+    }
 
     server {
         listen 80;
@@ -23,13 +23,17 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        # location /api {
-        #     rewrite ^/api/(.*) /$1 break;
-        #     proxy_pass http://backend;
-        #     proxy_set_header Host $host;
-        #     proxy_set_header X-Real-IP $remote_addr;
-        #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        #     proxy_set_header X-Forwarded-Proto $scheme;
-        # }
+        # Ensure /api (without trailing slash) is handled consistently
+        location = /api {
+            return 301 /api/$is_args$args;
+        }
+
+        location /api/ {
+            proxy_pass http://backend;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
     }
 }
