--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/stack": "^7.1.1",
+    "axios": "^1.11.0",
     "expo": "~53.0.20",
     "expo-constants": "~17.1.7",
     "expo-linking": "~7.1.7",
