--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,8 +2,8 @@
 PORT=5000
 NODE_ENV=development
 
-# Database Configuration
-MONGODB_URI=mongodb://localhost:27017/eventdb
+# Set IS_LAMBDA=true to simulate a Lambda environment locally (e.g., for testing the handler)
+IS_LAMBDA=false
 
 # Frontend Configuration (Only applicable for Web UI, not Android/IOS apps)
 # FRONTEND_URL=http://localhost:3000
@@ -12,3 +12,7 @@ MONGODB_URI=mongodb://localhost:27017/eventdb
 # Accepts: true|false|<number_of_hops>|CSV of CIDRs/named ranges
 # Defaults to: loopback, linklocal, uniquelocal, 10/8, 172.16/12, 192.168/16
 TRUST_PROXY=1
+
+# Supabase Configuration
+SUPABASE_URL=
+SUPABASE_ANON_KEY=
