feat: implement AWS S3 integration for image uploads and supabase for database

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -10,9 +10,23 @@ IS_LAMBDA=false
 
 # How Express trusts proxy headers (X-Forwarded-For, etc.)
 # Accepts: true|false|<number_of_hops>|CSV of CIDRs/named ranges
-# Defaults to: loopback, linklocal, uniquelocal, 10/8, 172.16/12, 192.168/16
+# Defaults to: loopback, linklocal, uniquelocal, 10/8, 172.16/12, 192.168.0.0/16
 TRUST_PROXY=1
 
 # Supabase Configuration
 SUPABASE_URL=
 SUPABASE_ANON_KEY=
+
+# JWT Secret (for manual authentication)
+JWT_SECRET=
+
+# AWS IAM Configuration
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+
+# AWS S3 Configuration
+AWS_REGION=
+AWS_S3_BUCKET_NAME=
+
+# AWS CloudFront Configuration
+CLOUDFRONT_DOMAIN=
