feat: update environment configuration, add CloudFront signing capabilities, and enhance event management features

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -11,7 +11,8 @@ IS_LAMBDA=false
 # How Express trusts proxy headers (X-Forwarded-For, etc.)
 # Accepts: true|false|<number_of_hops>|CSV of CIDRs/named ranges
 # Defaults to: loopback, linklocal, uniquelocal, 10/8, 172.16/12, 192.168.0.0/16
-TRUST_PROXY=1
+# In production set this false
+TRUST_PROXY=2
 
 # Supabase Configuration
 SUPABASE_URL=
@@ -30,3 +31,5 @@ AWS_S3_BUCKET_NAME=
 
 # AWS CloudFront Configuration
 CLOUDFRONT_DOMAIN=
+CLOUDFRONT_KEY_PAIR_ID=
+CLOUDFRONT_SECRET_PRIVATE_KEY=
