feat: add files for apk build

--- a/frontend/app.json
+++ b/frontend/app.json
@@ -21,7 +21,8 @@
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "edgeToEdgeEnabled": true
+      "edgeToEdgeEnabled": true,
+      "package": "com.tamilx.peceventapp"
     },
     "web": {
       "bundler": "metro",
@@ -29,6 +30,12 @@
     },
     "plugins": [
       "expo-router"
-    ]
+    ],
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "50d3cc6a-564e-43a6-848c-4d371bb7accc"
+      }
+    }
   }
 }
