feat: add Docker support for AWS Lambda deployment, update environment variables, and enhance error handling in API routes

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -3,7 +3,7 @@ PORT=5000
 NODE_ENV=development
 
 # Set IS_LAMBDA=true to simulate a Lambda environment locally (e.g., for testing the handler)
-IS_LAMBDA=false
+IS_LAMBDA=0
 
 # Frontend Configuration (Only applicable for Web UI, not Android/IOS apps)
 # FRONTEND_URL=http://localhost:3000
@@ -22,11 +22,11 @@ SUPABASE_ANON_KEY=
 JWT_SECRET=
 
 # AWS IAM Configuration
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
+AWS_PEC_ACCESS_KEY_ID=
+AWS_PEC_SECRET_ACCESS_KEY=
 
 # AWS S3 Configuration
-AWS_REGION=
+AWS_S3_REGION=
 AWS_S3_BUCKET_NAME=
 
 # AWS CloudFront Configuration
