--- a/frontend/app.json
+++ b/frontend/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "scheme": "peceventapp",
-    "name": "pec-event-app",
+    "name": "Prathyusha Events",
     "slug": "pec-event-app",
     "version": "1.0.0",
     "orientation": "portrait",
@@ -20,35 +20,21 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
+        "foregroundImage": "./assets/icon.png",
         "backgroundColor": "#ffffff"
       },
       "edgeToEdgeEnabled": true,
-<<<<<<< HEAD
-      "package": "com.tamilx.peceventapp"
-=======
       "package": "com.gideonjacob.peceventapp"
->>>>>>> 873f65000b2804f1e98d971e42c2dbe437098cdc
     },
     "web": {
       "bundler": "metro",
       "favicon": "./assets/favicon.png"
     },
-<<<<<<< HEAD
-    "plugins": [
-      "expo-router"
-    ],
-    "extra": {
-      "router": {},
-      "eas": {
-        "projectId": "50d3cc6a-564e-43a6-848c-4d371bb7accc"
-=======
     "plugins": ["expo-router"],
     "extra": {
       "router": {},
       "eas": {
         "projectId": "2e5641a2-b139-48d7-9cc1-85824035ad28"
->>>>>>> 873f65000b2804f1e98d971e42c2dbe437098cdc
       }
     }
   }
