--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,7 @@
     "@expo/ngrok": "^4.1.3",
     "@gorhom/bottom-sheet": "^4.6.4",
     "@react-native-async-storage/async-storage": "2.1.2",
-    "@react-navigation/native": "^7.1.17",
+    "@react-navigation/native": "^7.1.6",
     "@react-navigation/stack": "^7.1.1",
     "axios": "^1.11.0",
     "expo": "~53.0.20",
@@ -42,7 +42,7 @@
     "@testing-library/react-native": "^12.9.0",
     "@types/jest": "^29.5.14",
     "@types/node": "^20.0.0",
-    "@types/react": "^19.1.9",
+    "@types/react": "~19.0.10",
     "@types/react-dom": "^19.1.7",
     "@types/react-native": "^0.72.8",
     "@types/react-native-vector-icons": "^6.4.18",
