--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,11 +16,13 @@
     "@expo/ngrok": "^4.1.3",
     "@gorhom/bottom-sheet": "^4.6.4",
     "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-picker/picker": "2.11.1",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/stack": "^7.1.1",
     "axios": "^1.11.0",
     "expo": "~53.0.20",
     "expo-constants": "~17.1.7",
+    "expo-document-picker": "^13.1.6",
     "expo-linking": "~7.1.7",
     "expo-router": "~5.1.4",
     "expo-status-bar": "~2.2.3",
