--- a/frontend/eas.json
+++ b/frontend/eas.json
@@ -6,16 +6,28 @@
   "build": {
     "development": {
       "developmentClient": true,
-      "distribution": "internal"
+      "distribution": "internal",
+      "env": {
+        "APP_ENV": "development",
+        "EXPO_PUBLIC_API_URL": "http://10.0.2.2:3000" 
+      }
     },
     "preview": {
       "android":{
         "buildType": "apk"
       },
-      "distribution": "internal"
+      "distribution": "internal",
+      "env": {
+        "APP_ENV": "preview",
+        "EXPO_PUBLIC_API_URL": "https://3lgkw9cxpk.execute-api.ap-south-1.amazonaws.com/default"
+      }
     },
     "production": {
-      "autoIncrement": true
+      "autoIncrement": true,
+      "env": {
+        "APP_ENV": "production",
+        "EXPO_PUBLIC_API_URL": "https://3lgkw9cxpk.execute-api.ap-south-1.amazonaws.com/default"
+      }
     }
   },
   "submit": {
