--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "@react-navigation/stack": "^7.1.1",
     "axios": "^1.11.0",
     "expo": "~53.0.20",
+    "expo-build-properties": "~0.14.8",
     "expo-constants": "~17.1.7",
     "expo-document-picker": "^13.1.6",
     "expo-linking": "~7.1.7",
@@ -31,12 +32,12 @@
     "react-icons": "^5.5.0",
     "react-native": "0.79.5",
     "react-native-gesture-handler": "~2.24.0",
+    "react-native-permissions": "^5.4.2",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-web": "^0.20.0",
-    "expo-build-properties": "~0.14.8"
+    "react-native-web": "^0.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
