refactor: Change Publisher Event details page

--- a/frontend/app.json
+++ b/frontend/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "scheme": "peceventapp",
-    "name": "Prathyusha Events",
+    "name": "PEC Events",
     "slug": "pec-event-app",
     "version": "1.0.0",
     "orientation": "portrait",
