--- a/backend/package.json
+++ b/backend/package.json
@@ -25,8 +25,9 @@
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
-    "serverless-http": "^3.2.0"
-  },
+    "serverless-http": "^3.2.0",
+    "zod": "^3.23.8"
+  }
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^4.17.21",
